[gd_scene load_steps=5 format=3 uid="uid://dxdc5xrxfbvhl"]

[ext_resource type="Script" path="res://world.gd" id="1_dbf41"]

[sub_resource type="PlaneMesh" id="PlaneMesh_w7c6n"]
size = Vector2(20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_u0bq4"]
size = Vector3(23, 2, 21)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02ltk"]
bg_color = Color(0, 0, 0, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_dbf41")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_w7c6n")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_u0bq4")

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="Menu" type="Panel" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MainMenu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Conduit"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="MainMenu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="MainMenu/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEdit" type="LineEdit" parent="MainMenu/Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Address (localhost)"

[node name="PortEdit" type="LineEdit" parent="MainMenu/Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Port (45865)"

[node name="HostUi" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="HostUi"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_02ltk")

[node name="Label" type="Label" parent="HostUi/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HOSTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://character.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="MainMenu/Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
